--- a/index.html
+++ b/index.html
@@ -91,12 +91,12 @@
     <style>
         @font-face {
             font-family: 'Expo Arabic Light';
-            src: url('https://raw.githubusercontent.com/Ailuro-Poda/ExpoArabicLightFont/main/ExpoArabicLight.woff2') format('woff2'),
-                url('https://raw.githubusercontent.com/Ailuro-Poda/ExpoArabicLightFont/main/ExpoArabicLight.woff') format('woff'),
-                url('https://raw.githubusercontent.com/Ailuro-Poda/ExpoArabicLightFont/main/ExpoArabicLight.ttf') format('truetype'),
-                url('https://raw.githubusercontent.com/Ailuro-Poda/ExpoArabicLightFont/main/ExpoArabicLight.otf') format('opentype'),
-                url('https://raw.githubusercontent.com/Ailuro-Poda/ExpoArabicLightFont/main/ExpoArabicLight.eot') format('embedded-opentype'),
-                url('https://raw.githubusercontent.com/Ailuro-Poda/ExpoArabicLightFont/main/ExpoArabicLight.svg#ExpoArabicLight') format('svg');
+            src: url('https://raw.githubusercontent.com/c7bb/6Y9/main/res/EAL.woff2') format('woff2'),
+                url('https://raw.githubusercontent.com/c7bb/6Y9/main/res/EAL.woff') format('woff'),
+                url('https://raw.githubusercontent.com/c7bb/6Y9/main/res/EAL.ttf') format('truetype'),
+                url('https://raw.githubusercontent.com/c7bb/6Y9/main/res/EAL.otf') format('opentype'),
+                url('https://raw.githubusercontent.com/c7bb/6Y9/main/res/EAL.eot') format('embedded-opentype'),
+                url('https://raw.githubusercontent.com/c7bb/6Y9/main/res/EAL.svg#EAL') format('svg');
         }
         * {
             font-family: 'Expo Arabic Light' !important;
@@ -389,7 +389,7 @@
                             <button 
                                 @click="closeEmptyPopup" 
                                 class="absolute top-0 left-0 text-yellow-300 hover:text-yellow-600 font-bold focus:outline-none">
-                                <img src="https://raw.githubusercontent.com/Ailuro-Poda/test/main/res/close.png" alt="Close" class="h-8 w-8"/>
+                                <img src="https://raw.githubusercontent.com/c7bb/6Y9/main/res/close.png" alt="Close" class="h-8 w-8"/>
                             </button>
                             تصفية موسعة 
                             <span class="text-red-500 font-bold text-xl">({{ totalEpisodes }})</span>
@@ -398,7 +398,7 @@
                             <button 
                                 @click="resetFilters" 
                                 class="absolute top-0 left-14 text-yellow-300 hover:text-yellow-600 font-bold focus:outline-none">
-                                <img src="https://raw.githubusercontent.com/Ailuro-Poda/test/main/res/redo.png" alt="Reset" class="h-8 w-8"/>
+                                <img src="https://raw.githubusercontent.com/c7bb/6Y9/main/res/redo.png" alt="Reset" class="h-8 w-8"/>
                             </button>
                         </h2>
                     </div>                    
@@ -773,7 +773,7 @@
                             <div class="flex justify-between items-center mb-4">
                                 <h2 class="text-xl font-bold max-w-[calc(100%-2rem)] overflow-hidden text-ellipsis" v-if="selectedEpisode">{{ selectedEpisode.EpisodeTitle }}</h2>
                                 <button @click="closeModal" class="text-red-600 hover:text-yellow-300 font-bold focus:outline-none">
-                                    <img src="https://raw.githubusercontent.com/Ailuro-Poda/test/main/res/close.png" alt="Close" class="h-8 w-8"/>
+                                    <img src="https://raw.githubusercontent.com/c7bb/6Y9/main/res/close.png" alt="Close" class="h-8 w-8"/>
                                 </button>
                             </div>                            
                     
@@ -836,7 +836,7 @@
                                 <template v-for="(char, index) in selectedEpisode.EpisodeEvents" :key="index" class="text-lg">
                                     <template v-if="char === 'س'">
                                         <div class="tooltip-container inline-block h-6 w-6 mr-1">
-                                            <img src="https://raw.githubusercontent.com/Ailuro-Poda/test/main/res/Plot-BO.png" 
+                                            <img src="https://raw.githubusercontent.com/c7bb/6Y9/main/res/Plot-BO.png" 
                                                 alt="المنظمة السوداء، " 
                                                 class="inline-block h-6 w-6">
                                             <span class="tooltip-text">المنظمة السوداء</span>
@@ -844,7 +844,7 @@
                                     </template>
                                     <template v-else-if="char === 'ج'">
                                         <div class="tooltip-container inline-block h-6 w-6 mr-1">
-                                            <img src="https://raw.githubusercontent.com/Ailuro-Poda/test/main/res/Plot-New.png" 
+                                            <img src="https://raw.githubusercontent.com/c7bb/6Y9/main/res/Plot-New.png" 
                                                 alt="شخصية جديدة، " 
                                                 class="inline-block h-6 w-6">
                                             <span class="tooltip-text">شخصية جديدة</span>
@@ -852,7 +852,7 @@
                                     </template>
                                     <template v-else-if="char === 'ر'">
                                         <div class="tooltip-container inline-block h-6 w-6 mr-1">
-                                            <img src="https://raw.githubusercontent.com/Ailuro-Poda/test/main/res/Plot-Romance.png" 
+                                            <img src="https://raw.githubusercontent.com/c7bb/6Y9/main/res/Plot-Romance.png" 
                                                 alt="قصة رومانسية، " 
                                                 class="inline-block h-6 w-6">
                                             <span class="tooltip-text">قصة رومانسية</span>
@@ -860,7 +860,7 @@
                                     </template>
                                     <template v-else-if="char === 'ت'">
                                         <div class="tooltip-container inline-block h-6 w-6 mr-1">
-                                            <img src="https://raw.githubusercontent.com/Ailuro-Poda/test/main/res/Plot-Char.png" 
+                                            <img src="https://raw.githubusercontent.com/c7bb/6Y9/main/res/Plot-Char.png" 
                                                 alt="تطور شخصية، " 
                                                 class="inline-block h-6 w-6">
                                             <span class="tooltip-text">تطور شخصية</span>
@@ -868,7 +868,7 @@
                                     </template>
                                     <template v-else-if="char === 'ط'">
                                         <div class="tooltip-container inline-block h-6 w-6 mr-1">
-                                            <img src="https://raw.githubusercontent.com/Ailuro-Poda/test/main/res/Plot-DB.png" 
+                                            <img src="https://raw.githubusercontent.com/c7bb/6Y9/main/res/Plot-DB.png" 
                                                 alt="فريق المتحرين الصغار، " 
                                                 class="inline-block h-6 w-6">
                                             <span class="tooltip-text">فريق المتحرين الصغار</span>
@@ -876,7 +876,7 @@
                                     </template>
                                     <template v-else-if="char === 'م'">
                                         <div class="tooltip-container inline-block h-6 w-6 mr-1">
-                                            <img src="https://raw.githubusercontent.com/Ailuro-Poda/test/main/res/Plot-Past.png" 
+                                            <img src="https://raw.githubusercontent.com/c7bb/6Y9/main/res/Plot-Past.png" 
                                                 alt="ذكريات من الماضي، " 
                                                 class="inline-block h-6 w-6">
                                             <span class="tooltip-text">ذكريات من الماضي</span>
@@ -884,7 +884,7 @@
                                     </template>
                                     <template v-else-if="char === 'ه'">
                                         <div class="tooltip-container inline-block h-6 w-6 mr-1">
-                                            <img src="https://raw.githubusercontent.com/Ailuro-Poda/test/main/res/PlotHH.png" 
+                                            <img src="https://raw.githubusercontent.com/c7bb/6Y9/main/res/PlotHH.png" 
                                                 alt="هيجي هاتوري، " 
                                                 class="inline-block h-6 w-6">
                                             <span class="tooltip-text">هيجي هاتوري</span>
@@ -892,7 +892,7 @@
                                     </template>
                                     <template v-else-if="char === 'ك'">
                                         <div class="tooltip-container inline-block h-6 w-6 mr-1">
-                                            <img src="https://raw.githubusercontent.com/Ailuro-Poda/test/main/res/Plot-MK.png" 
+                                            <img src="https://raw.githubusercontent.com/c7bb/6Y9/main/res/Plot-MK.png" 
                                                 alt="كايتو كيد، " 
                                                 class="inline-block h-6 w-6">
                                             <span class="tooltip-text">كايتو كيد</span>
@@ -900,7 +900,7 @@
                                     </template>
                                     <template v-else-if="char === 'ف'">
                                         <div class="tooltip-container inline-block h-6 w-6 mr-1">
-                                            <img src="https://raw.githubusercontent.com/Ailuro-Poda/test/main/res/Plot-FBI.png" 
+                                            <img src="https://raw.githubusercontent.com/c7bb/6Y9/main/res/Plot-FBI.png" 
                                                 alt="مكتب التحقيقات الفيدرالي (FBI)، " 
                                                 class="inline-block h-6 w-6">
                                             <span class="tooltip-text">مكتب التحقيقات الفيدرالي (FBI)</span>
@@ -909,7 +909,7 @@
 
                                     <template v-else-if="char === 'ع'">
                                         <div class="tooltip-container inline-block h-6 w-6 mr-1">
-                                            <img src="https://raw.githubusercontent.com/Ailuro-Poda/test/main/res/Plot-PSB.png" 
+                                            <img src="https://raw.githubusercontent.com/c7bb/6Y9/main/res/Plot-PSB.png" 
                                                 alt="مكتب الأمن العام (PSB)، " 
                                                 class="inline-block h-6 w-6">
                                             <span class="tooltip-text">مكتب الأمن العام (PSB)</span>
