--- a/index.html
+++ b/index.html
@@ -1649,6 +1649,7 @@
                     const modal = document.getElementById('episodeModal');
                     if (event.target == modal) {
                         this.closeModal();
+                        this.closeEmptyPopup();
                     }
                 });
             }
