--- a/index.html
+++ b/index.html
@@ -926,9 +926,9 @@
                                 <p class="text-lg">{{ selectedEpisode.EpisodeStory }}</p>
                             </fieldset>
 
-                            <fieldset v-if="selectedEpisode && selectedEpisode.EpisodeSummary !== ''" class="border p-2 rounded mb-2">
+                            <fieldset v-if="selectedEpisode && selectedEpisode.EpisodeSummary !== ''" class="border p-2 text-orange-400 rounded mb-2">
                                 <legend class="font-bold cursor-pointer" @click="toggleSpoiler">
-                                    <span>{{ spoilerVisible ? "إخفاء الملخص" : "عرض الملخص" }}</span>
+                                    <span class="text-red-500">{{ spoilerVisible ? "إخفاء الملخص" : "عرض الملخص" }}</span>
                                 </legend>
                                 <p v-if="spoilerVisible" class="text-lg">{{ selectedEpisode.EpisodeSummary }}</p>
                             </fieldset>                            
