--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" dir="rtl">
 <head>
-<script>
+<!-- <script>
     document.addEventListener("DOMContentLoaded", () => {
     if (!window.Telegram || !window.Telegram.WebApp) {
         // If not accessed via Telegram, redirect or show an error
@@ -16,7 +16,7 @@
         tg.ready(); // Notify Telegram that the app is ready
     }
 });
-</script>
+</script> -->
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-KNKPH3ZEY5"></script>
 <script>
