--- a/index.html
+++ b/index.html
@@ -1,22 +1,26 @@
 <!DOCTYPE html>
 <html lang="en" dir="rtl">
 <head>
-<!-- <script>
-    document.addEventListener("DOMContentLoaded", () => {
-    if (!window.Telegram || !window.Telegram.WebApp) {
-        // If not accessed via Telegram, redirect or show an error
+<script>
+document.addEventListener("DOMContentLoaded", () => {
+    const isTelegramWebApp = window.Telegram && window.Telegram.WebApp;
+    const userAgent = navigator.userAgent || navigator.vendor || window.opera;
+    const isTelegramAgent = /Telegram/i.test(userAgent);
+
+    if (!isTelegramWebApp && !isTelegramAgent) {
+        // If not accessed via Telegram, redirect or block access
         document.body.innerHTML = `
-            <div style="text-align: center; margin-top: 50px;">
+            <div style="text-align: center; margin-top: 100px; font-weight: bold;">
                 <h1>Access Denied</h1>
-                <p>This app can only be accessed through Telegram.</p>
+                <p>This app can only be accessed through Telegram</p>
             </div>`;
-    } else {
-        // Initialize the Telegram Web App
+    } else if (isTelegramWebApp) {
+        // Initialize Telegram Web App
         const tg = window.Telegram.WebApp;
         tg.ready(); // Notify Telegram that the app is ready
     }
 });
-</script> -->
+</script>
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-KNKPH3ZEY5"></script>
 <script>
@@ -1629,6 +1633,7 @@
                 closeModal() {
                     this.showModal = false;
                     this.selectedEpisode = null;
+                    this.spoilerVisible = false;
                 },
 
                 openEmptyPopup() {
