--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" dir="rtl">
 <head>
-<script>
+<!-- <script>
 document.addEventListener("DOMContentLoaded", () => {
     const isTelegramWebApp = window.Telegram && window.Telegram.WebApp;
     const userAgent = navigator.userAgent || navigator.vendor || window.opera;
@@ -20,7 +20,7 @@ document.addEventListener("DOMContentLoaded", () => {
         tg.ready(); // Notify Telegram that the app is ready
     }
 });
-</script>
+</script> -->
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-KNKPH3ZEY5"></script>
 <script>
