--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ document.addEventListener("DOMContentLoaded", () => {
     }
 });
 </script> -->
-<script>
+<!-- <script>
     if (window.Telegram && window.Telegram.WebApp) {
       console.log("Running as a Telegram Mini App");
     } else {
@@ -31,7 +31,7 @@ document.addEventListener("DOMContentLoaded", () => {
       window.location.replace(redirectionUrl);
       // document.body.innerHTML = "This application is designed to be used only within Telegram. Redirecting you now...";
     }
-  </script>
+  </script> -->
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-KNKPH3ZEY5"></script>
 <script>
