--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ document.addEventListener("DOMContentLoaded", () => {
   window.location.href = "https://t.me/DCRef_bot/"; 
 }
   </script> -->
-  <script>
+  <!-- <script>
     // Check if the Telegram Web App API is available
 if (window.Telegram && window.Telegram.WebApp) {
     const webApp = window.Telegram.WebApp;
@@ -73,7 +73,7 @@ if (window.Telegram && window.Telegram.WebApp) {
     // Optionally redirect to your bot's chat (not directly opening the web app):
     // window.location.href = "https://t.me/your_bot_username"; // This opens the chat, not the web app!
 }
-  </script>
+  </script> -->
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-KNKPH3ZEY5"></script>
 <script>
