--- a/index.html
+++ b/index.html
@@ -1740,7 +1740,7 @@ if (window.Telegram && window.Telegram.WebApp) {
             }
         }).mount('#app');
     </script>
-     <script>
+     <!-- <script>
         if (window.Telegram && window.Telegram.WebApp) {
           console.log("Running as a Telegram Mini App");
           // Proceed with your application logic
@@ -1750,6 +1750,6 @@ if (window.Telegram && window.Telegram.WebApp) {
           const redirectionUrl = `https://t.me/${botUsername}`;
           window.location.replace(redirectionUrl);
         }
-      </script>         
+      </script>          -->
 </body>
 </html>
