--- a/index.html
+++ b/index.html
@@ -1002,9 +1002,10 @@ if (window.Telegram && window.Telegram.WebApp) {
                             <fieldset v-if="selectedEpisode && selectedEpisode.EpisodeNextHint !== ''" class="border p-2 rounded mb-2">
                                 <legend class="font-bold text-lg">تلميح الحلقة الحالية</legend>
                                 <p class="text-lg text-center">
-                                    {{ selectedEpisode.EpisodeNumber.includes('الفيلم') ? '' : selectedEpisode.EpisodeNextHint + 1 }}
+                                    <!-- Check if 'الفيلم' is in the hint -->
+                                    {{ selectedEpisode.EpisodeNextHint.includes('الفيلم') ? '' : getNextHint(selectedEpisode.EpisodeNextHint) }}
                                 </p>
-                            </fieldset>                            
+                            </fieldset>                                                   
 
                             <fieldset v-if="selectedEpisode && selectedEpisode.EpisodeStory !== ''" class="border p-2 rounded mb-2">
                                 <legend class="font-bold text-lg">القصة</legend>
@@ -1749,6 +1750,15 @@ if (window.Telegram && window.Telegram.WebApp) {
                 },
                 toggleSpoiler() {
                     this.spoilerVisible = !this.spoilerVisible; // Toggle visibility
+                },
+                getNextHint(hint) {
+                    // Check if hint is a number and not containing "الفيلم"
+                    if (!isNaN(hint)) {
+                        return parseInt(hint) + 1;  // Return the next episode number
+                    } else {
+                        // If it's not numeric, you can implement another logic based on the format.
+                        return hint;  // Return the hint as is if no numeric increment logic applies
+                    }
                 },
             },
             mounted() {
