--- a/index.html
+++ b/index.html
@@ -998,14 +998,14 @@ if (window.Telegram && window.Telegram.WebApp) {
                                     </template>
                                 </template>
                             </p>
-
+                            
                             <fieldset v-if="selectedEpisode && selectedEpisode.EpisodeNextHint !== ''" class="border p-2 rounded mb-2">
                                 <legend class="font-bold text-lg">تلميح الحلقة الحالية</legend>
                                 <p class="text-lg text-center">
-                                    <!-- Check if 'الفيلم' is in the hint -->
-                                    {{ selectedEpisode.EpisodeNextHint.includes('الفيلم') ? '' : getNextHint(selectedEpisode.EpisodeNextHint) }}
+                                    <!-- Check if the hint contains 'الفيلم'. If not, increment the value -->
+                                    {{ getNextHint(selectedEpisode.EpisodeNextHint) }}
                                 </p>
-                            </fieldset>                                                   
+                            </fieldset>                                                                        
 
                             <fieldset v-if="selectedEpisode && selectedEpisode.EpisodeStory !== ''" class="border p-2 rounded mb-2">
                                 <legend class="font-bold text-lg">القصة</legend>
@@ -1752,13 +1752,19 @@ if (window.Telegram && window.Telegram.WebApp) {
                     this.spoilerVisible = !this.spoilerVisible; // Toggle visibility
                 },
                 getNextHint(hint) {
-                    // Check if hint is a number and not containing "الفيلم"
-                    if (!isNaN(hint)) {
-                        return parseInt(hint) + 2;  // Return the next episode number
-                    } else {
-                        // If it's not numeric, you can implement another logic based on the format.
-                        return hint;  // Return the hint as is if no numeric increment logic applies
+                    // Check if the hint contains 'الفيلم'
+                    if (hint.includes('الفيلم')) {
+                        return '';  // Do nothing if the hint contains 'الفيلم'
                     }
+
+                    // Try to increment the hint if it's a numeric value
+                    const numericHint = parseInt(hint, 10);
+                    if (!isNaN(numericHint)) {
+                        return numericHint + 1;  // Return the incremented number
+                    }
+
+                    // If it's not a number, return the hint as is (adjust as necessary)
+                    return hint;
                 },
             },
             mounted() {
