--- a/index.html
+++ b/index.html
@@ -1752,7 +1752,7 @@ if (window.Telegram && window.Telegram.WebApp) {
                 },
 
                 highlightSpoilerText() {
-                    const text = this.spoilerVisible ? "عرض الملخص (حرق)" : "إخفاء الملخص";
+                    const text = this.spoilerVisible ? "إخفاء الملخص" : "عرض الملخص (حرق)";
                     
                     // Highlight "حرق" in red
                     return text.replace('حرق', '<span class="text-red-500">حرق</span>');
