--- a/index.html
+++ b/index.html
@@ -1000,7 +1000,7 @@ if (window.Telegram && window.Telegram.WebApp) {
                             </p>
 
                             <fieldset v-if="selectedEpisode && selectedEpisode.EpisodeCurrentHint !== ''" class="border p-2 rounded mb-2">
-                                <legend class="font-bold text-lg">تلميح الحلقة الحالية</legend>
+                                <legend class="font-bold text-lg">تلميح الحلقة</legend>
                                 <p class="text-lg text-center">{{ selectedEpisode.EpisodeCurrentHint }}</p>
                             </fieldset>
 
