--- a/index.html
+++ b/index.html
@@ -853,6 +853,13 @@ if (window.Telegram && window.Telegram.WebApp) {
                                 <button @click="closeModal" class="text-red-600 hover:text-yellow-300 font-bold focus:outline-none">
                                     <img src="https://raw.githubusercontent.com/c7bb/6Y9/main/res/close.png" alt="Close" class="h-8 w-8"/>
                                 </button>
+                                <!-- Next Episode Button -->
+                                    <button 
+                                    v-if="selectedEpisode.EpisodeParts" 
+                                    @click="fetchNextEpisode" 
+                                    class="text-blue-600 hover:text-yellow-300 font-bold focus:outline-none ml-2">
+                                    التالي
+                                </button>
                             </div>                            
                     
                             <p v-if="selectedEpisode" class="mb-2 text-lg">
@@ -1757,6 +1764,25 @@ if (window.Telegram && window.Telegram.WebApp) {
                     // Highlight "حرق" in red
                     return text.replace('حرق', '<span class="text-red-500">حرق</span>');
                 },
+
+                fetchNextEpisode() {
+                // Find the next episode matching the same EpisodeParts
+                const currentIndex = this.episodes.findIndex(
+                    (ep) => ep.EpisodeNumber === this.selectedEpisode.EpisodeNumber
+                );
+
+                const nextEpisode = this.episodes.find(
+                    (ep, index) => 
+                        index > currentIndex && 
+                        ep.EpisodeParts === this.selectedEpisode.EpisodeParts
+                );
+
+                if (nextEpisode) {
+                    this.openModal(nextEpisode); // Open modal with the next episode
+                } else {
+                    alert("لا توجد حلقات أخرى في نفس القسم.");
+                }
+            },
             },
             mounted() {
                 this.loadData();
