--- a/index.html
+++ b/index.html
@@ -853,9 +853,9 @@ if (window.Telegram && window.Telegram.WebApp) {
                                 <button @click="closeModal" class="text-red-600 hover:text-yellow-300 font-bold focus:outline-none">
                                     <img src="https://raw.githubusercontent.com/c7bb/6Y9/main/res/close.png" alt="Close" class="h-8 w-8"/>
                                 </button>
-                                <!-- Next Episode Button -->
+                                <!-- Next Episode Button (shown only if EpisodeParts exists) -->
                                 <button 
-                                    v-if="nextEpisodeExists" 
+                                    v-if="selectedEpisode.EpisodeParts && nextEpisodeExists" 
                                     @click="fetchNextEpisode" 
                                     class="focus:outline-none ml-2"
                                 >
@@ -1714,15 +1714,19 @@ if (window.Telegram && window.Telegram.WebApp) {
                     this.selectedEpisode = episode;
                     this.showModal = true;
 
-                    // Determine if there are further episodes with the same EpisodeParts
-                    const currentIndex = this.episodes.findIndex(
-                        (ep) => ep.EpisodeNumber === episode.EpisodeNumber
-                    );
-                    this.nextEpisodeExists = this.episodes.some(
-                        (ep, index) => 
-                            index > currentIndex && 
-                            ep.EpisodeParts === episode.EpisodeParts
-                    );
+                    // Check if there are more episodes with the same EpisodeParts
+                    if (episode.EpisodeParts) {
+                        const currentIndex = this.episodes.findIndex(
+                            (ep) => ep.EpisodeNumber === episode.EpisodeNumber
+                        );
+                        this.nextEpisodeExists = this.episodes.some(
+                            (ep, index) =>
+                                index > currentIndex &&
+                                ep.EpisodeParts === episode.EpisodeParts
+                        );
+                    } else {
+                        this.nextEpisodeExists = false; // Hide button if EpisodeParts is null/undefined
+                    }
                 },
                 closeModal() {
                     this.showModal = false;
@@ -1785,13 +1789,13 @@ if (window.Telegram && window.Telegram.WebApp) {
 
                     // Find the next episode with the same EpisodeParts
                     const nextEpisode = this.episodes.find(
-                        (ep, index) => 
-                            index > currentIndex && 
+                        (ep, index) =>
+                            index > currentIndex &&
                             ep.EpisodeParts === this.selectedEpisode.EpisodeParts
                     );
 
                     if (nextEpisode) {
-                        this.openModal(nextEpisode); // Open the modal with the next episode
+                        this.openModal(nextEpisode); // Open the modal for the next episode
                     } else {
                         this.nextEpisodeExists = false; // Hide the button
                     }
