--- a/index.html
+++ b/index.html
@@ -850,17 +850,21 @@ if (window.Telegram && window.Telegram.WebApp) {
                         <div class="bg-cyan-900 text-slate-200 font-bold rounded-lg p-6 w-4/5 md:w-1/2 lg:w-1/3 max-h-[80vh] overflow-y-auto">
                             <div class="flex justify-between items-center mb-4">
                                 <h2 class="text-xl font-bold max-w-[calc(100%-2rem)] overflow-hidden text-ellipsis" v-if="selectedEpisode">{{ selectedEpisode.EpisodeTitle }}</h2>
-                                <button @click="closeModal" class="text-red-600 hover:text-yellow-300 font-bold focus:outline-none">
-                                    <img src="https://raw.githubusercontent.com/c7bb/6Y9/main/res/close.png" alt="Close" class="h-8 w-8"/>
-                                </button>
-                                <!-- Next Episode Button (shown only if EpisodeParts exists) -->
-                                <button 
-                                    v-if="selectedEpisode.EpisodeParts && nextEpisodeExists" 
-                                    @click="fetchNextEpisode" 
-                                    class="focus:outline-none ml-2"
-                                >
-                                    <img src="https://raw.githubusercontent.com/c7bb/6Y9/main/res/next.png" alt="Next Episode" class="h-8 w-8" />
-                                </button>
+                                <div class="flex flex-col items-center">
+                                    <!-- Close Modal Button -->
+                                    <button @click="closeModal" class="text-red-600 hover:text-yellow-300 font-bold focus:outline-none mb-2">
+                                        <img src="https://raw.githubusercontent.com/c7bb/6Y9/main/res/close.png" alt="Close" class="h-8 w-8" />
+                                    </button>
+                                    
+                                    <!-- Next Episode Button (shown only if EpisodeParts exists) -->
+                                    <button 
+                                        v-if="selectedEpisode.EpisodeParts && nextEpisodeExists" 
+                                        @click="fetchNextEpisode" 
+                                        class="focus:outline-none"
+                                    >
+                                        <img src="https://raw.githubusercontent.com/c7bb/6Y9/main/res/next.png" alt="Next Episode" class="h-8 w-8" />
+                                    </button>
+                                </div>
                             </div>                            
                     
                             <p v-if="selectedEpisode" class="mb-2 text-lg">
