--- a/index.html
+++ b/index.html
@@ -852,7 +852,7 @@ if (window.Telegram && window.Telegram.WebApp) {
                                 <h2 class="text-xl font-bold max-w-[calc(100%-2rem)] overflow-hidden text-ellipsis" v-if="selectedEpisode">{{ selectedEpisode.EpisodeTitle }}</h2>
                                 <div class="flex flex-col items-center">
                                     <!-- Close Modal Button -->
-                                    <button @click="closeModal" class="text-red-600 hover:text-yellow-300 font-bold focus:outline-none mb-2">
+                                    <button @click="closeModal" class="focus:outline-none">
                                         <img src="https://raw.githubusercontent.com/c7bb/6Y9/main/res/close.png" alt="Close" class="h-8 w-8" />
                                     </button>
                                     
@@ -862,7 +862,7 @@ if (window.Telegram && window.Telegram.WebApp) {
                                     <button 
                                         v-if="selectedEpisode.EpisodeParts && nextEpisodeExists" 
                                         @click="fetchNextEpisode" 
-                                        class="focus:outline-none mb-2"
+                                        class="focus:outline-none"
                                     >
                                         <img src="https://raw.githubusercontent.com/c7bb/6Y9/main/res/next.png" alt="Next Episode" class="h-8 w-8" />
                                     </button>
