--- a/index.html
+++ b/index.html
@@ -853,7 +853,7 @@ if (window.Telegram && window.Telegram.WebApp) {
                                 <!-- Buttons Container -->
                                 <div class="flex flex-col items-center">
                                     <!-- Close Modal Button -->
-                                    <button @click="closeModal" class="focus:outline-none">
+                                    <button @click="closeModal" class="focus:outline-none mb-6">
                                         <img src="https://raw.githubusercontent.com/c7bb/6Y9/main/res/close.png" alt="Close" class="h-8 w-8" />
                                     </button>
 
@@ -861,7 +861,7 @@ if (window.Telegram && window.Telegram.WebApp) {
                                     <button 
                                         v-if="selectedEpisode.EpisodeParts && nextEpisodeExists" 
                                         @click="fetchNextEpisode" 
-                                        class="focus:outline-none"
+                                        class="focus:outline-none mb-6"
                                     >
                                         <img src="https://raw.githubusercontent.com/c7bb/6Y9/main/res/next.png" alt="Next Episode" class="h-8 w-8" />
                                     </button>
@@ -870,7 +870,7 @@ if (window.Telegram && window.Telegram.WebApp) {
                                     <button 
                                         v-if="selectedEpisode.EpisodeParts && previousEpisodeExists" 
                                         @click="fetchPreviousEpisode" 
-                                        class=""
+                                        class="focus:outline-none"
                                     >
                                         <img src="https://raw.githubusercontent.com/c7bb/6Y9/main/res/previous.png" alt="Previous Episode" class="h-8 w-8" />
                                     </button>
