--- a/index.html
+++ b/index.html
@@ -850,9 +850,13 @@ if (window.Telegram && window.Telegram.WebApp) {
                         <div class="bg-cyan-900 text-slate-200 font-bold rounded-lg p-6 w-4/5 md:w-1/2 lg:w-1/3 max-h-[80vh] overflow-y-auto">
                             <div class="grid grid-cols-[1fr_auto] items-center gap-4 mb-4">
                                 <!-- Episode Title -->
-                                <h2 class="text-xl font-bold max-w-[calc(100%-2rem)] overflow-hidden text-ellipsis" v-if="selectedEpisode">
-                                    {{ selectedEpisode.EpisodeTitle }}
-                                </h2>
+                                <div>
+
+                                    <h2 class="text-xl font-bold max-w-[calc(100%-2rem)] overflow-hidden text-ellipsis" v-if="selectedEpisode">
+                                        {{ selectedEpisode.EpisodeTitle }}
+                                    </h2>
+
+                                </div>
                             
                                 <!-- Buttons Container -->
                                 <div class="grid gap-6 justify-items-center">
