--- a/index.html
+++ b/index.html
@@ -886,7 +886,7 @@ if (window.Telegram && window.Telegram.WebApp) {
                             <!-- Scrollable Content -->
                             <div class="overflow-y-auto p-4 flex-1">
 
-                                <h2 class="text-xl font-bold max-w-[calc(100%-2rem)] overflow-hidden text-ellipsis" v-if="selectedEpisode">
+                                <h2 class="text-xl font-bold max-w-[calc(100%-2rem)] mb-2 overflow-hidden text-ellipsis" v-if="selectedEpisode">
                                     {{ selectedEpisode.EpisodeTitle }}
                                 </h2>
 
