--- a/index.html
+++ b/index.html
@@ -858,7 +858,7 @@ if (window.Telegram && window.Telegram.WebApp) {
                                 <button 
                                     v-if="selectedEpisode.EpisodeParts && nextEpisodeExists" 
                                     @click="fetchNextEpisode" 
-                                    class="focus:outline-none"
+                                    class="focus:outline-none ml-6"
                                 >
                                     <img src="https://raw.githubusercontent.com/c7bb/6Y9/main/res/next.png" alt="Next Episode" class="h-8 w-8" />
                                 </button>
@@ -886,7 +886,7 @@ if (window.Telegram && window.Telegram.WebApp) {
                             <!-- Scrollable Content -->
                             <div class="overflow-y-auto p-4 flex-1">
 
-                                <h2 class="text-xl font-bold max-w-[calc(100%-2rem)] mb-2 overflow-hidden text-ellipsis" v-if="selectedEpisode">
+                                <h2 class="text-xl font-bold mb-2 overflow-hidden text-ellipsis" v-if="selectedEpisode">
                                     {{ selectedEpisode.EpisodeTitle }}
                                 </h2>
 
