--- a/index.html
+++ b/index.html
@@ -860,7 +860,7 @@ if (window.Telegram && window.Telegram.WebApp) {
                                     @click="fetchNextEpisode" 
                                     class="focus:outline-none ml-10"
                                 >
-                                    <img src="https://raw.githubusercontent.com/c7bb/6Y9/main/res/next.png" alt="Next Episode" class="h-8 w-8" />
+                                    <img src="https://raw.githubusercontent.com/c7bb/6Y9/main/res/next.png" alt="التالي" class="h-8 w-8" />
                                 </button>
                                 
                                 <!-- Previous Episode Button -->
@@ -869,7 +869,7 @@ if (window.Telegram && window.Telegram.WebApp) {
                                     @click="fetchPreviousEpisode" 
                                     class="focus:outline-none"
                                 >
-                                    <img src="https://raw.githubusercontent.com/c7bb/6Y9/main/res/previous.png" alt="Previous Episode" class="h-8 w-8" />
+                                    <img src="https://raw.githubusercontent.com/c7bb/6Y9/main/res/previous.png" alt="السابق" class="h-8 w-8" />
                                 </button>
                             </div>
                             <!-- Middle: Empty Space or Title Placeholder -->
