--- a/index.html
+++ b/index.html
@@ -850,7 +850,7 @@ if (window.Telegram && window.Telegram.WebApp) {
                         <div class="relative bg-cyan-900 text-slate-200 font-bold rounded-lg w-4/5 md:w-1/2 lg:w-1/3 max-h-[80vh] overflow-hidden flex flex-col">
                             
                     <!-- Sticky Header Section -->
-                    <div class="sticky top-0 z-50 bg-cyan-900 p-2">
+                    <div class="sticky top-0 z-50 bg-cyan-900 pt-4 pl-4 pr-4 pb-2">
                         <div class="flex justify-between items-center">
                             <!-- Right Side: Navigation Buttons -->
                             <div class="flex space-x-2">
@@ -858,7 +858,7 @@ if (window.Telegram && window.Telegram.WebApp) {
                                 <button 
                                     v-if="selectedEpisode.EpisodeParts && nextEpisodeExists" 
                                     @click="fetchNextEpisode" 
-                                    class="focus:outline-none ml-10"
+                                    class="focus:outline-none ml-12"
                                 >
                                     <img src="https://raw.githubusercontent.com/c7bb/6Y9/main/res/next.png" alt="التالي" class="h-8 w-8" />
                                 </button>
